--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -785,12 +785,13 @@
     gap: 3.5rem; /* Generous gap so that one feature box is focused/visible at a time on phone */
   }
   .instagramFeaturesGrid > div {
-    min-height: 82dvh;
+    height: 100dvh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     scroll-snap-align: center;
     scroll-snap-stop: always;
+    box-sizing: border-box;
   }
   .featureCard {
     padding: 1.75rem;
